# TimerProj

./: CMakeLists.txt  Clock.cpp  Clock.h  Display.cpp  Display.h  Main.cpp  README.md  Timer.cpp  Timer.h  main.cpp
test/: CMakeLists.txt  ClockTest.cpp  TimerTest.cpp  runAllTests.cpp
